--- a/index.html
+++ b/index.html
@@ -71,18 +71,25 @@
  </div>
  
 
-<script>
-   var source = "AUD-20220320-WA0014.mp3"
- var audio = document.createElement("audio");
- //
- audio.autoplay = true;
- //
- audio.load()
- audio.addEventListener("load", function() { 
-     audio.play(); 
- }, true);
- audio.src = source;
-</script>
+
+   <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+    </head>
+    <body id="clk">
+   <audio class="song" loops controls>
+   <source src="https://www.8notes.com/school/mp32/piano/happy_birthday.mp3"></audio>
+   <script>
+   alert("Happy Birthday Genius");
+   $('#clk').click(function(){
+   var audio = $('.song')[0];
+   try{
+   navigator.vibrate(20);}
+   catch(Exception){
+       console.log("Vibrate mode is not supported")
+   }
+        audio.play();        
+});
+   </script>
+
 
 
 
