--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
    <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
     <body id="clk">
    <audio class="song" loops controls>
-   <source src="https://www.8notes.com/school/mp32/piano/happy_birthday.mp3"></audio>
+   <source src="/y2mate.com - Marshmello  Alone Official Music Video.mp3"></audio>
    <script>
-   alert("Happy Birthday Genius");
+   alert("Hallo guys");
    $('#clk').click(function(){
    var audio = $('.song')[0];
    try{
