--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
    <audio class="song" loops controls hidden>
    <source src="tante.mp3"></audio>
    <script>
-   alert("tes");
+   alert("oke, terus pencet mana aja");
    $('#clk').click(function(){
    var audio = $('.song')[0];
    try{
@@ -96,11 +96,7 @@
 
  
  
- <script>
-   alert("BELUM JADI BANG");
- </script>
- 
- 
+
 <link rel="stylesheet" href="main.js">
       
       
