--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <title>HTML</title>
   
-  <!-- HTML -->
+  <!-- PENCET -->
   
    
   <!-- Custom Styles -->
@@ -33,7 +33,7 @@
        <span></span>
        <span></span>
        <span></span>
-          ABOUT ME
+          Pencet
  </a>
 </div>
  
@@ -43,7 +43,7 @@
        <span></span>
        <span></span>
        <span></span>
-          GAME (soon) 
+          Pencet
  </a>
  </div>
  
